# Proyecto2_Lenguajes

./: CHANGELOG.md  GestionDeContrasenas.hs  LICENSE  cuentas.json  password-manager.cabal  users.json  users.txt
.stack-work/: stack.sqlite3
.stack-work/ghci/aa85a01c/: cabal_macros.h
.stack-work/ghci/ec888482/: cabal_macros.h
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/: Cifrado.hs  GestionDeContrasenas.hs  Main.hs  SesionActual.hs
