cabal-version:       2.2

name:                password-manager
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/password-manager#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2025 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

executable password-manager
  main-is:             Main.hs
  hs-source-dirs:      src
  build-depends:       base >=4.7 && <5,
                       bytestring,
                       cryptonite,
                       memory,
                       process,
                       base16-bytestring,
                       directory,
                       echo ==0.1.3
  default-language:    Haskell2010
  